--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body,html,main{
     height: 100%;
+    font-family: 'Rubik', sans-serif;
 }
 
 :root{
@@ -33,9 +34,86 @@ section{
     gap: 1.5rem;
 }
 
-.card:nth-child(1){
+/* Card principal */
+
+.card-main{
+    background-color: var(--Dark-blue);
     grid-row: 1 /3 ;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1rem;
 }
+
+.card-main-header{
+    background-color: var(--Blue);
+    border-radius: 1rem;
+    padding-bottom: 4rem;
+}
+.card-main-header img{
+    width: 3rem;
+    margin: 1rem 0 1rem 1rem;
+    border: 3px solid white;
+    border-radius: 50%;
+}
+
+.card-main-header .card-main-text{
+    margin-left: 1rem;
+    font-size: 0.5rem;
+    font-weight: 300;
+}
+
+.card-main-header .card-main-name{
+    margin: 0 1rem;
+    font-weight: 300;
+    max-width: 10rem;
+    font-size: 2rem;
+}
+
+.card-main-footer p{
+    margin: 1rem 0 1rem 1rem;
+    font-size: 0.8rem;
+    color: gray;
+    cursor: pointer;
+}
+
+.card-main-footer .active{
+    color: #fff;
+}
+
+
+/* card */
+
 .card{
-    border: 1px solid black;
+    max-height: 200px;
+    width: 250px;
+    border-radius: 12px;
+    padding-top: 2rem;
+}
+.card .header-icon{
+    position: relative;
+    float: right;
+    width: 3.5rem;
+}
+
+.work{
+    background-color: var(--Light-red-work);
+}
+
+.card-footer{
+    padding: 1rem 0 1rem 1rem;
+    
+    background-color: var(--Dark-blue);
+    border-radius: 10px;
+}
+
+.card-footer img{
+    float: right;
+    margin-right: 1rem;
+}
+
+.card-footer .card-footer-hrs {
+    margin: 1rem;
+    display: block;
+    font-size: 3rem;
+    font-weight: 300;
 }
