--- a/style.css
+++ b/style.css
@@ -144,3 +144,12 @@ section{
     background-color: var(--Soft-orange-self);
 }
 
+/* Media querys */
+
+@media only screen and (max-width: 400px) {
+    section{
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+    }
+}
+
